--- a/src/style.css
+++ b/src/style.css
@@ -162,10 +162,6 @@ li {
   font-weight: 200;
 }
 
-.bold {
-  font-weight: 500;
-}
-
 .footer-links {
   text-decoration: none;
 }
@@ -175,6 +171,30 @@ li {
   font-size: 13px;
   text-align: center;
   margin-top: 25px;
+}
+
+.about-header {
+  background-color: var(--primary-light);
+}
+
+.about-header h1 {
+  color: #ffffff;
+  font-size: 36px;
+  line-height: 1;
+}
+
+.about-header p {
+  color: #ffffff;
+}
+
+.about-header .contact-button {
+  background-color: #ffffff;
+  color: var(--primary-light);
+  padding: 10px;
+}
+
+.teachers-img {
+  border: 3px solid var(--primary-light);
 }
 
 @media (max-width: 1898px) {
@@ -270,21 +290,8 @@ li {
     height: auto;
   }
 
-  .sunrise-yoga-text {
-    font-size: 18px;
-    margin-top: 25px !important;
-  }
-
   h4 {
     margin-top: 15px;
-  }
-
-  .yoga-benefit-text {
-    font-size: 18px;
-    margin: 5px !important;
-    display: block !important;
-    margin: 0 auto !important;
-    line-height: 2;
   }
 
   h2 {
@@ -303,6 +310,15 @@ li {
   ul {
     font-size: 15px;
   }
+
+  .about-header h1 {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+
+  .student-name {
+    font-size: 24px;
+  }
 }
 
 @media (max-width: 923px) {
@@ -316,15 +332,6 @@ li {
   header,
   .body-center {
     padding: 3% 100px;
-  }
-}
-
-@media (max-width: 767px) {
-  .yoga-benefit-text {
-    font-size: 18px;
-    margin: 5px !important;
-    display: block !important;
-    margin: 0 auto !important;
   }
 }
 
